--- a/src/components/MediaDetail.css
+++ b/src/components/MediaDetail.css
@@ -1,23 +1,26 @@
 /* src/components/MediaDetail.css */
 @import '../styles/colors.css';
-
+@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 .media-detail-overlay {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.6);
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1000;
+  
 }
 
 .media-detail-content {
   background-color: var(--background-light);
   color: var(--text-light);
   padding: 2rem;
+  font-family: 'Source Code Pro';
   border-radius: 8px;
   max-width: 800px;
   width: 90%;
@@ -33,6 +36,7 @@
   top: 10px;
   right: 10px;
   font-size: 24px;
+  font-family: 'Source Code Pro';
   background: none;
   border: none;
   cursor: pointer;
@@ -62,6 +66,8 @@
   margin-top: 0;
   margin-bottom: 1rem;
   font-size: 2rem;
+  font-family: 'Source Code Pro';
+  
 }
 
 .media-detail-info p {
@@ -76,6 +82,7 @@
   margin-top: 1rem;
   cursor: pointer;
   font-size: 1rem;
+  font-family: 'Source Code Pro';
   border-radius: 30px;
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
